<resources>
    <string name="app_name">Diary</string>
    <string name="client_web_id" translatable="false">"575101660631-snd45ng04apnq52vv7r4t8hk3of8rd11.apps.googleusercontent.com"</string>

    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="topic">Topic</string>
    <string name="homework">Homework</string>
    <string name="previous_homework">Previous homework</string>
    <string name="save">Save</string>
    <string name="empty_news">No news</string>
    <string name="retry">Retry</string>
    <string name="final_marks">Final</string>
    <string name="welcome">Welcome to diary!</string>
    <string name="diary">Diary</string>
    <string name="menu">Menu</string>
    <string name="diary_for_teacher">Diary for teacher</string>
    <string name="performance">Performance</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    <string name="actual">Actual</string>
    <string name="first_quarter" translatable="false">I</string>
    <string name="second_quarter" translatable="false">II</string>
    <string name="third_quarter" translatable="false">III</string>
    <string name="fourth_quarter" translatable="false">IV</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign out</string>
    <string name="lesson">Lesson</string>
    <string name="average">Average:</string>
    <string name="no_data">No data</string>
    <string name="marks">Marks:</string>
    <string name="login">Login</string>
    <string name="sign_in">Login</string>
    <string name="password">Password</string>
    <string name="homework_type">Homework: %s</string>
    <string name="previous">Previous</string>
    <string name="send_previous">Previous</string>
    <string name="send_all">All</string>
    <string name="send_actual">Actual</string>
    <string name="filters">%s filters</string>
    <string name="set_filters">Set filters</string>
    <string name="have_homework">Have homework</string>
    <string name="have_topic">Have topic</string>
    <string name="have_marks">Have marks</string>
    <string name="name_filter_hint">Name filter</string>
    <string name="share_homework">Share homework</string>
    <string name="send_to">Send to</string>
    <string name="notes">Notes</string>
    <string name="analytics">Analytics</string>

    <string-array name="quarter">
        <item>First quarter</item>
        <item>Second quarter</item>
        <item>Third quarter</item>
        <item>Fourth quarter</item>
    </string-array>

    <string-array name="period">
        <item>First quarter</item>
        <item>Second quarter</item>
        <item>Third quarter</item>
        <item>Fourth quarter</item>
        <item>Year</item>
    </string-array>

    <string-array name="intervals">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>1 week</item>
        <item>1 month</item>
    </string-array>

    <string-array name="progress_compare">
        <item>a week ago</item>
        <item>2 weeks ago</item>
        <item>month ago</item>
        <item>previous quarter</item>
    </string-array>

    <string-array name="sort_actual_marks_by">
        <item>name</item>
        <item>average</item>
        <item>progress</item>
        <item>marks count</item>
        <item>two status</item>
    </string-array>

    <string-array name="sorting_order">
        <item>ASC</item>
        <item>DESC</item>
    </string-array>

    <string name="show_progress">Show progress</string>
    <string name="show_progress_compared_to">Show progress compared to</string>
    <string name="sort_by">Sort by</string>

    <string name="better_week_progress">%s%% better than a week ago</string>
    <string name="worse_week_progress">%s%% lower than a week ago</string>
    <string name="better_two_weeks_progress">%s%% better than two weeks ago</string>
    <string name="worse_two_weeks_progress">%s%% lower than two weeks ago</string>
    <string name="better_month_progress">%s%% better than a month ago</string>
    <string name="worse_month_progress">%s%% lower than a month ago</string>
    <string name="better_quarter_progress">%s%% better than the previous quarter</string>
    <string name="worse_quarter_progress">%s%% lower than the previous quarter</string>


    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="calculate_average">Calculate average</string>
    <string name="actual_marks">Actual marks:</string>
    <string name="close">Close</string>
    <string name="progress_info">Progress is not shown if changes are less than 5%</string>
    <string name="sorting_order">Sorting order</string>

    <string name="common_chart">Common chart</string>
    <string name="marks_pie">Number of marks (pie)</string>
    <string name="final_marks_pie">Number of final marks</string>
    <string name="marks_line">Number of marks (line)</string>
    <string name="in_total">%s in total</string>
    <string name="error">Error</string>
    <string name="interval">Interval</string>
    <string name="diary_title">Welcome to diary!</string>
    <string name="diary_subtitle">Unofficial client edu43</string>
    <string name="your_profile">Your profile</string>
    <string name="show_email">Show email</string>
    <string name="show_school_info">Show school info</string>
    <string name="show_grade_info">Show grade info</string>
    <string name="your_email">Your email</string>
    <string name="your_school">Your school</string>
    <string name="your_grade">Your grade</string>
    <string name="grade_name">Name:</string>
    <string name="grade_head">Grade head:</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_in_in_your_account">Log in your account</string>
    <string name="contacts">&lt;a href="https://vk.com/dorhun">Contacts&lt;/a></string>
    <string name="empty_field">The field is empty</string>
    <string name="invalid_login">Invalid login</string>
    <string name="password_must_be_at_least">Password must be at least %s symbols long</string>
    <string name="select_user">Select a user</string>
    <string name="news_title">News</string>
    <string name="latest_news">Latest news</string>
    <string name="important_news">Important</string>
    <string name="interesting_news">Interesting</string>
    <string name="settings_contacts">Contacts</string>
    <string name="themes">Themes</string>
    <string name="utilities">Utilities</string>
    <string name="settings">Settings</string>
    <string name="mark_colors">Colors of marks</string>
    <string name="homework_from">Homework from</string>
    <string name="homework_for">Homework for</string>
    <string name="show_mark_type">Show mark type</string>
    <string name="control_test">- Control test</string>
    <string name="test">- Test</string>
    <string name="lesson_number">%s lesson</string>

    <string name="current_type">Current mark</string>
    <string name="control_test_type">Control test</string>
    <string name="test_type">Test</string>
    <string name="laboratory_test_type">Laboratory test</string>
    <string name="practical_test_type">Practical test</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="timeout">Timeout</string>
    <string name="download">Download</string>
    <string name="is_going_on_now">Is going on now…</string>
    <string name="next_lesson">Next…</string>
    <string name="lesson_starts_soon">Lesson starts soon…</string>
    <string name="show_lessons_of_the_day_in_the_menu">Show lessons of the day in the menu</string>
    <string name="open_monday_instead_of_weekend">Open monday instead of weekend</string>
    <string name="lesson_passed">Lesson passed</string>

    <string name="show_first_graph">Show first graph</string>
    <string name="show_second_graph">Show second graph</string>
    <string name="show_third_graph">Show third graph</string>
    <string name="show_fourth_graph">Show fourth graph</string>
    <string name="default_theme">Default</string>
    <string name="new_year_theme">New Year</string>
    <string name="bobr_zlobor_theme">Bobr Zlobor</string>
    <string name="icon">Icon</string>
</resources>