<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/utilities"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/menu"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.maxim.diaryforstudents.settings.customView.SwitchSettingsView
        android:id="@+id/showLessonsInMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/show_lessons_of_the_day_in_the_menu"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/diary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.maxim.diaryforstudents.settings.customView.SwitchSettingsView
        android:id="@+id/openMonday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/open_monday_instead_of_weekend"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/analytics"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.maxim.diaryforstudents.settings.customView.SwitchSettingsView
        android:id="@+id/showFirstGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/show_first_graph"
        android:textSize="18sp" />

    <com.maxim.diaryforstudents.settings.customView.SwitchSettingsView
        android:id="@+id/showSecondGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/show_second_graph"
        android:textSize="18sp" />

    <com.maxim.diaryforstudents.settings.customView.SwitchSettingsView
        android:id="@+id/showThirdGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/show_third_graph"
        android:textSize="18sp" />

    <com.maxim.diaryforstudents.settings.customView.SwitchSettingsView
        android:id="@+id/showFourthGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/show_fourth_graph"
        android:textSize="18sp" />

</LinearLayout>