<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.6"
        android:src="@drawable/bz_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingHorizontal="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/diary_title"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp" />

                    </LinearLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diary_subtitle"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/settingsButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/settings_button_ny"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/settings_24"
                    app:tint="@color/blue" />

            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/lessonsViewPager"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/menu_lessons"
                android:elevation="5dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <FrameLayout
                android:id="@+id/performanceButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/menu_button_2_ny">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="10dp"
                    android:alpha=".6"
                    android:rotation="3"
                    android:src="@drawable/bz1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/performance"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/newMarksCounter"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/red"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:text="5"
                    tools:visibility="visible" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/diaryButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/menu_button">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="10dp"
                    android:alpha=".6"
                    android:rotation="10"
                    android:src="@drawable/bz2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/diary"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/analyticsButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/menu_button_3">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="10dp"
                    android:alpha=".6"
                    android:rotation="2"
                    android:src="@drawable/bz3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/analytics"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/newsButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/menu_button_5">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:alpha=".6"
                    android:rotation="4"
                    android:src="@drawable/bz4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/news"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/newNewsCounter"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/red"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:text="5"
                    tools:visibility="visible" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/profileButton"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/menu_button_4">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:alpha=".6"
                    android:rotation="2"
                    android:src="@drawable/bz5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>